--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             'Cryo|Geo': 'Craystaline',
             'Electro|Geo': 'Craystaline',
 
-            'Bloom|Hydro': 'Hyperbloom',
+            'Bloom|Electro': 'Hyperbloom',
             'Bloom|Pyro': 'Burgeon',
             'Dendro|Quicken': 'Spread',
             'Electro|Quicken': 'Aggravate',
